# lexer

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/lib/io/: CBufferedReader.cpp  CBufferedReader.hpp  CMemorizedReader.hpp  IReader.hpp
src/lib/lexer/: CLexer.hpp  ILexer.hpp  Token.hpp
test/func/: pytest_config.json
test/func/all_operators/: expected.txt  input.txt
test/lib/io/: CBufferedReaderTest.cpp  CMemorizedReaderTest.cpp  MockReader.cpp
test/lib/lexer/: CLexerTest.cpp
test/unit/lib/io/: CBufferedReaderTest.cpp  CMemorizedReaderTest.cpp  MockReader.cpp
test/unit/lib/lexer/: CLexerTest.cpp
